// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the button as active 1`] = `
<button
  class="Button Button--primary Button--is-active"
  data-test-id="cf-ui-button"
  type="button"
>
  <span
    class="TabFocusTrap Button__inner-wrapper"
    tabindex="-1"
  >
    <span
      class="Button__label"
    >
      Active button
    </span>
  </span>
</button>
`;

exports[`renders the button as link 1`] = `
<a
  class="Button Button--primary"
  data-test-id="cf-ui-button"
  href="/"
  type="button"
>
  <span
    class="TabFocusTrap Button__inner-wrapper"
    tabindex="-1"
  >
    <span
      class="Button__label"
    >
      Button link
    </span>
  </span>
</a>
`;

exports[`renders the component 1`] = `
<button
  class="Button Button--primary"
  data-test-id="cf-ui-button"
  type="button"
>
  <span
    class="TabFocusTrap Button__inner-wrapper"
    tabindex="-1"
  >
    <span
      class="Button__label"
    >
      Embed entry
    </span>
  </span>
</button>
`;

exports[`renders the component as naked 1`] = `
<button
  class="Button Button--naked"
  data-test-id="cf-ui-button"
  type="button"
>
  <span
    class="TabFocusTrap Button__inner-wrapper"
    tabindex="-1"
  >
    <span
      class="Button__label"
    >
      Embed entry
    </span>
  </span>
</button>
`;

exports[`renders the component as primary 1`] = `
<button
  class="Button Button--primary"
  data-test-id="cf-ui-button"
  type="button"
>
  <span
    class="TabFocusTrap Button__inner-wrapper"
    tabindex="-1"
  >
    <span
      class="Button__label"
    >
      Embed entry
    </span>
  </span>
</button>
`;

exports[`renders the component disabled 1`] = `
<button
  class="Button Button--primary Button--disabled"
  data-test-id="cf-ui-button"
  disabled=""
  type="button"
>
  <span
    class="TabFocusTrap Button__inner-wrapper"
    tabindex="-1"
  >
    <span
      class="Button__label"
    >
      Embed entry
    </span>
  </span>
</button>
`;

exports[`renders the component full width 1`] = `
<button
  class="Button Button--primary Button--full-width"
  data-test-id="cf-ui-button"
  type="button"
>
  <span
    class="TabFocusTrap Button__inner-wrapper"
    tabindex="-1"
  >
    <span
      class="Button__label"
    >
      Embed entry
    </span>
  </span>
</button>
`;

exports[`renders the component in loading state 1`] = `
<button
  class="Button Button--primary"
  data-test-id="cf-ui-button"
  type="button"
>
  <span
    class="TabFocusTrap Button__inner-wrapper"
    tabindex="-1"
  >
    <span
      class="Button__label"
    >
      Embed entry
    </span>
    <svg
      class="Spinner Button__spinner Spinner--small Spinner--white"
      data-test-id="cf-ui-spinner"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Loading…
      </title>
      <path
        d="M2,10a8,8,0,0,1,8-8V0a10,10,0,0,0,0,20V18A8,8,0,0,1,2,10Z"
      />
      <path
        d="M10,0V2a8,8,0,0,1,0,16v2A10,10,0,0,0,10,0Z"
        style="opacity: 0.4;"
      />
    </svg>
  </span>
</button>
`;

exports[`renders the component with an additional class name 1`] = `
<button
  class="Button my-extra-class Button--primary"
  data-test-id="cf-ui-button"
  type="button"
>
  <span
    class="TabFocusTrap Button__inner-wrapper"
    tabindex="-1"
  >
    <span
      class="Button__label"
    >
      Embed entry
    </span>
  </span>
</button>
`;

exports[`renders the component with dropdown indicator 1`] = `
<button
  class="Button Button--primary"
  data-test-id="cf-ui-button"
  type="button"
>
  <span
    class="TabFocusTrap Button__inner-wrapper"
    tabindex="-1"
  >
    <span
      class="Button__label"
    >
      Embed Entry
    </span>
    <svg
      class="Icon Icon--small Icon--white Button__dropdown-icon"
      data-test-id="cf-ui-icon"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
  </span>
</button>
`;

exports[`renders the component with icon 1`] = `
<button
  class="Button Button--primary"
  data-test-id="cf-ui-button"
  type="button"
>
  <span
    class="TabFocusTrap Button__inner-wrapper"
    tabindex="-1"
  >
    <svg
      class="Icon Icon--small Icon--white Button__icon"
      data-test-id="cf-ui-icon"
      height="18"
      viewBox="0 0 24 24"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
    <span
      class="Button__label"
    >
      Embed entry
    </span>
  </span>
</button>
`;
